# fastapi-asyncalchemy

./: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1662487834-63d087421b9c_initial.py  1663612494-e92cfc086c0d_change_user_model.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  users.py
app/core/: security.py  settings.py
app/database/: session.py
app/models/: __init__.py  base.py  user.py
app/repositories/: base.py  user_repository.py
app/schemas/: __init__.py  base.py  user.py
